--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "node server.js",
     "start": "node server.js"
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
